parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NEWLINE

Grammar

Rule 0     S' -> parent
Rule 1     parent -> lang
Rule 2     parent -> lang parent
Rule 3     lang -> expression SCOLON
Rule 4     lang -> variables SCOLON
Rule 5     lang -> print_stmt SCOLON
Rule 6     lang -> block
Rule 7     lang -> for_loop
Rule 8     lang -> struct SCOLON
Rule 9     lang -> struct_dec SCOLON
Rule 10    lang -> struct_assign SCOLON
Rule 11    lang -> struct_fetch SCOLON
Rule 12    lang -> empty
Rule 13    empty -> <empty>
Rule 14    print_stmt -> print_multiple_stmt
Rule 15    print_multiple_stmt -> PRINT LPAREN multiple RPAREN
Rule 16    multiple -> expression
Rule 17    multiple -> expression COMMA multiple
Rule 18    multiple -> struct_fetch
Rule 19    multiple -> struct_fetch COMMA multiple
Rule 20    struct -> STRUCT VARID LCURL struct_block RCURL
Rule 21    struct_block -> variables SCOLON
Rule 22    struct_block -> variables SCOLON struct_block
Rule 23    struct_dec -> VARID VARID
Rule 24    struct_assign -> VARID POINT variableassign
Rule 25    struct_fetch -> VARID POINT VARID
Rule 26    block -> LCURL parent RCURL
Rule 27    for_loop -> FOR LPAREN TYPE VARID EQUAL expression SCOLON expression SCOLON forupdate RPAREN block
Rule 28    variables -> variableassign
Rule 29    variables -> type_declare
Rule 30    variables -> type_assign
Rule 31    forupdate -> expression
Rule 32    forupdate -> variableassign
Rule 33    type_declare -> TYPE VARID
Rule 34    variableassign -> VARID EQUAL expression
Rule 35    type_assign -> TYPE VARID EQUAL expression
Rule 36    expression -> expression PLUS expression
Rule 37    expression -> expression MINUS expression
Rule 38    expression -> expression MULTIPLY expression
Rule 39    expression -> expression DIVIDE expression
Rule 40    expression -> MINUS expression
Rule 41    expression -> expression MOD expression
Rule 42    expression -> expression POWER expression
Rule 43    expression -> expression LESSER expression
Rule 44    expression -> expression GREATER expression
Rule 45    expression -> expression LESSEQUAL expression
Rule 46    expression -> expression GREATEQUAL expression
Rule 47    expression -> expression NOTEQUAL expression
Rule 48    expression -> expression DOUBLEQUAL expression
Rule 49    expression -> expression AND expression
Rule 50    expression -> expression OR expression
Rule 51    expression -> LPAREN expression RPAREN
Rule 52    expression -> expression DOUBLEPLUS
Rule 53    expression -> expression DOUBLEMINUS
Rule 54    expression -> NOT expression
Rule 55    expression -> VARID
Rule 56    expression -> INT
Rule 57    expression -> FLOAT
Rule 58    expression -> BOOL
Rule 59    expression -> CHAR
Rule 60    expression -> STRING
Rule 61    expression -> empty

Terminals, with rules where they appear

AND                  : 49
BOOL                 : 58
CHAR                 : 59
COMMA                : 17 19
DIVIDE               : 39
DOUBLEMINUS          : 53
DOUBLEPLUS           : 52
DOUBLEQUAL           : 48
EQUAL                : 27 34 35
FLOAT                : 57
FOR                  : 27
GREATEQUAL           : 46
GREATER              : 44
INT                  : 56
LCURL                : 20 26
LESSEQUAL            : 45
LESSER               : 43
LPAREN               : 15 27 51
MINUS                : 37 40
MOD                  : 41
MULTIPLY             : 38
NEWLINE              : 
NOT                  : 54
NOTEQUAL             : 47
OR                   : 50
PLUS                 : 36
POINT                : 24 25
POWER                : 42
PRINT                : 15
RCURL                : 20 26
RPAREN               : 15 27 51
SCOLON               : 3 4 5 8 9 10 11 21 22 27 27
STRING               : 60
STRUCT               : 20
TYPE                 : 27 33 35
VARID                : 20 23 23 24 25 25 27 33 34 35 55
error                : 

Nonterminals, with rules where they appear

block                : 6 27
empty                : 12 61
expression           : 3 16 17 27 27 31 34 35 36 36 37 37 38 38 39 39 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 52 53 54
for_loop             : 7
forupdate            : 27
lang                 : 1 2
multiple             : 15 17 19
parent               : 2 26 0
print_multiple_stmt  : 14
print_stmt           : 5
struct               : 8
struct_assign        : 10
struct_block         : 20 22
struct_dec           : 9
struct_fetch         : 11 18 19
type_assign          : 30
type_declare         : 29
variableassign       : 24 28 32
variables            : 4 21 22

Parsing method: LALR

state 0

    (0) S' -> . parent
    (1) parent -> . lang
    (2) parent -> . lang parent
    (3) lang -> . expression SCOLON
    (4) lang -> . variables SCOLON
    (5) lang -> . print_stmt SCOLON
    (6) lang -> . block
    (7) lang -> . for_loop
    (8) lang -> . struct SCOLON
    (9) lang -> . struct_dec SCOLON
    (10) lang -> . struct_assign SCOLON
    (11) lang -> . struct_fetch SCOLON
    (12) lang -> . empty
    (36) expression -> . expression PLUS expression
    (37) expression -> . expression MINUS expression
    (38) expression -> . expression MULTIPLY expression
    (39) expression -> . expression DIVIDE expression
    (40) expression -> . MINUS expression
    (41) expression -> . expression MOD expression
    (42) expression -> . expression POWER expression
    (43) expression -> . expression LESSER expression
    (44) expression -> . expression GREATER expression
    (45) expression -> . expression LESSEQUAL expression
    (46) expression -> . expression GREATEQUAL expression
    (47) expression -> . expression NOTEQUAL expression
    (48) expression -> . expression DOUBLEQUAL expression
    (49) expression -> . expression AND expression
    (50) expression -> . expression OR expression
    (51) expression -> . LPAREN expression RPAREN
    (52) expression -> . expression DOUBLEPLUS
    (53) expression -> . expression DOUBLEMINUS
    (54) expression -> . NOT expression
    (55) expression -> . VARID
    (56) expression -> . INT
    (57) expression -> . FLOAT
    (58) expression -> . BOOL
    (59) expression -> . CHAR
    (60) expression -> . STRING
    (61) expression -> . empty
    (28) variables -> . variableassign
    (29) variables -> . type_declare
    (30) variables -> . type_assign
    (14) print_stmt -> . print_multiple_stmt
    (26) block -> . LCURL parent RCURL
    (27) for_loop -> . FOR LPAREN TYPE VARID EQUAL expression SCOLON expression SCOLON forupdate RPAREN block
    (20) struct -> . STRUCT VARID LCURL struct_block RCURL
    (23) struct_dec -> . VARID VARID
    (24) struct_assign -> . VARID POINT variableassign
    (25) struct_fetch -> . VARID POINT VARID
    (13) empty -> .
    (34) variableassign -> . VARID EQUAL expression
    (33) type_declare -> . TYPE VARID
    (35) type_assign -> . TYPE VARID EQUAL expression
    (15) print_multiple_stmt -> . PRINT LPAREN multiple RPAREN

  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for VARID resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for LCURL resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for STRUCT resolved as shift
  ! shift/reduce conflict for TYPE resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
    MINUS           shift and go to state 13
    LPAREN          shift and go to state 14
    NOT             shift and go to state 15
    VARID           shift and go to state 16
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    BOOL            shift and go to state 19
    CHAR            shift and go to state 20
    STRING          shift and go to state 21
    LCURL           shift and go to state 26
    FOR             shift and go to state 27
    STRUCT          shift and go to state 29
    SCOLON          reduce using rule 13 (empty -> .)
    PLUS            reduce using rule 13 (empty -> .)
    MULTIPLY        reduce using rule 13 (empty -> .)
    DIVIDE          reduce using rule 13 (empty -> .)
    MOD             reduce using rule 13 (empty -> .)
    POWER           reduce using rule 13 (empty -> .)
    LESSER          reduce using rule 13 (empty -> .)
    GREATER         reduce using rule 13 (empty -> .)
    LESSEQUAL       reduce using rule 13 (empty -> .)
    GREATEQUAL      reduce using rule 13 (empty -> .)
    NOTEQUAL        reduce using rule 13 (empty -> .)
    DOUBLEQUAL      reduce using rule 13 (empty -> .)
    AND             reduce using rule 13 (empty -> .)
    OR              reduce using rule 13 (empty -> .)
    DOUBLEPLUS      reduce using rule 13 (empty -> .)
    DOUBLEMINUS     reduce using rule 13 (empty -> .)
    $end            reduce using rule 13 (empty -> .)
    TYPE            shift and go to state 28
    PRINT           shift and go to state 30

  ! MINUS           [ reduce using rule 13 (empty -> .) ]
  ! LPAREN          [ reduce using rule 13 (empty -> .) ]
  ! NOT             [ reduce using rule 13 (empty -> .) ]
  ! VARID           [ reduce using rule 13 (empty -> .) ]
  ! INT             [ reduce using rule 13 (empty -> .) ]
  ! FLOAT           [ reduce using rule 13 (empty -> .) ]
  ! BOOL            [ reduce using rule 13 (empty -> .) ]
  ! CHAR            [ reduce using rule 13 (empty -> .) ]
  ! STRING          [ reduce using rule 13 (empty -> .) ]
  ! LCURL           [ reduce using rule 13 (empty -> .) ]
  ! FOR             [ reduce using rule 13 (empty -> .) ]
  ! STRUCT          [ reduce using rule 13 (empty -> .) ]
  ! TYPE            [ reduce using rule 13 (empty -> .) ]
  ! PRINT           [ reduce using rule 13 (empty -> .) ]

    parent                         shift and go to state 1
    lang                           shift and go to state 2
    expression                     shift and go to state 3
    variables                      shift and go to state 4
    print_stmt                     shift and go to state 5
    block                          shift and go to state 6
    for_loop                       shift and go to state 7
    struct                         shift and go to state 8
    struct_dec                     shift and go to state 9
    struct_assign                  shift and go to state 10
    struct_fetch                   shift and go to state 11
    empty                          shift and go to state 12
    variableassign                 shift and go to state 22
    type_declare                   shift and go to state 23
    type_assign                    shift and go to state 24
    print_multiple_stmt            shift and go to state 25

state 1

    (0) S' -> parent .



state 2

    (1) parent -> lang .
    (2) parent -> lang . parent
    (1) parent -> . lang
    (2) parent -> . lang parent
    (3) lang -> . expression SCOLON
    (4) lang -> . variables SCOLON
    (5) lang -> . print_stmt SCOLON
    (6) lang -> . block
    (7) lang -> . for_loop
    (8) lang -> . struct SCOLON
    (9) lang -> . struct_dec SCOLON
    (10) lang -> . struct_assign SCOLON
    (11) lang -> . struct_fetch SCOLON
    (12) lang -> . empty
    (36) expression -> . expression PLUS expression
    (37) expression -> . expression MINUS expression
    (38) expression -> . expression MULTIPLY expression
    (39) expression -> . expression DIVIDE expression
    (40) expression -> . MINUS expression
    (41) expression -> . expression MOD expression
    (42) expression -> . expression POWER expression
    (43) expression -> . expression LESSER expression
    (44) expression -> . expression GREATER expression
    (45) expression -> . expression LESSEQUAL expression
    (46) expression -> . expression GREATEQUAL expression
    (47) expression -> . expression NOTEQUAL expression
    (48) expression -> . expression DOUBLEQUAL expression
    (49) expression -> . expression AND expression
    (50) expression -> . expression OR expression
    (51) expression -> . LPAREN expression RPAREN
    (52) expression -> . expression DOUBLEPLUS
    (53) expression -> . expression DOUBLEMINUS
    (54) expression -> . NOT expression
    (55) expression -> . VARID
    (56) expression -> . INT
    (57) expression -> . FLOAT
    (58) expression -> . BOOL
    (59) expression -> . CHAR
    (60) expression -> . STRING
    (61) expression -> . empty
    (28) variables -> . variableassign
    (29) variables -> . type_declare
    (30) variables -> . type_assign
    (14) print_stmt -> . print_multiple_stmt
    (26) block -> . LCURL parent RCURL
    (27) for_loop -> . FOR LPAREN TYPE VARID EQUAL expression SCOLON expression SCOLON forupdate RPAREN block
    (20) struct -> . STRUCT VARID LCURL struct_block RCURL
    (23) struct_dec -> . VARID VARID
    (24) struct_assign -> . VARID POINT variableassign
    (25) struct_fetch -> . VARID POINT VARID
    (13) empty -> .
    (34) variableassign -> . VARID EQUAL expression
    (33) type_declare -> . TYPE VARID
    (35) type_assign -> . TYPE VARID EQUAL expression
    (15) print_multiple_stmt -> . PRINT LPAREN multiple RPAREN

  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for VARID resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for LCURL resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for STRUCT resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 1 (parent -> lang .)
  ! reduce/reduce conflict for RCURL resolved using rule 1 (parent -> lang .)
  ! shift/reduce conflict for TYPE resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
    $end            reduce using rule 1 (parent -> lang .)
    RCURL           reduce using rule 1 (parent -> lang .)
    MINUS           shift and go to state 13
    LPAREN          shift and go to state 14
    NOT             shift and go to state 15
    VARID           shift and go to state 16
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    BOOL            shift and go to state 19
    CHAR            shift and go to state 20
    STRING          shift and go to state 21
    LCURL           shift and go to state 26
    FOR             shift and go to state 27
    STRUCT          shift and go to state 29
    SCOLON          reduce using rule 13 (empty -> .)
    PLUS            reduce using rule 13 (empty -> .)
    MULTIPLY        reduce using rule 13 (empty -> .)
    DIVIDE          reduce using rule 13 (empty -> .)
    MOD             reduce using rule 13 (empty -> .)
    POWER           reduce using rule 13 (empty -> .)
    LESSER          reduce using rule 13 (empty -> .)
    GREATER         reduce using rule 13 (empty -> .)
    LESSEQUAL       reduce using rule 13 (empty -> .)
    GREATEQUAL      reduce using rule 13 (empty -> .)
    NOTEQUAL        reduce using rule 13 (empty -> .)
    DOUBLEQUAL      reduce using rule 13 (empty -> .)
    AND             reduce using rule 13 (empty -> .)
    OR              reduce using rule 13 (empty -> .)
    DOUBLEPLUS      reduce using rule 13 (empty -> .)
    DOUBLEMINUS     reduce using rule 13 (empty -> .)
    TYPE            shift and go to state 28
    PRINT           shift and go to state 30

  ! MINUS           [ reduce using rule 13 (empty -> .) ]
  ! LPAREN          [ reduce using rule 13 (empty -> .) ]
  ! NOT             [ reduce using rule 13 (empty -> .) ]
  ! VARID           [ reduce using rule 13 (empty -> .) ]
  ! INT             [ reduce using rule 13 (empty -> .) ]
  ! FLOAT           [ reduce using rule 13 (empty -> .) ]
  ! BOOL            [ reduce using rule 13 (empty -> .) ]
  ! CHAR            [ reduce using rule 13 (empty -> .) ]
  ! STRING          [ reduce using rule 13 (empty -> .) ]
  ! LCURL           [ reduce using rule 13 (empty -> .) ]
  ! FOR             [ reduce using rule 13 (empty -> .) ]
  ! STRUCT          [ reduce using rule 13 (empty -> .) ]
  ! TYPE            [ reduce using rule 13 (empty -> .) ]
  ! PRINT           [ reduce using rule 13 (empty -> .) ]
  ! $end            [ reduce using rule 13 (empty -> .) ]
  ! RCURL           [ reduce using rule 13 (empty -> .) ]

    lang                           shift and go to state 2
    parent                         shift and go to state 31
    expression                     shift and go to state 3
    variables                      shift and go to state 4
    print_stmt                     shift and go to state 5
    block                          shift and go to state 6
    for_loop                       shift and go to state 7
    struct                         shift and go to state 8
    struct_dec                     shift and go to state 9
    struct_assign                  shift and go to state 10
    struct_fetch                   shift and go to state 11
    empty                          shift and go to state 12
    variableassign                 shift and go to state 22
    type_declare                   shift and go to state 23
    type_assign                    shift and go to state 24
    print_multiple_stmt            shift and go to state 25

state 3

    (3) lang -> expression . SCOLON
    (36) expression -> expression . PLUS expression
    (37) expression -> expression . MINUS expression
    (38) expression -> expression . MULTIPLY expression
    (39) expression -> expression . DIVIDE expression
    (41) expression -> expression . MOD expression
    (42) expression -> expression . POWER expression
    (43) expression -> expression . LESSER expression
    (44) expression -> expression . GREATER expression
    (45) expression -> expression . LESSEQUAL expression
    (46) expression -> expression . GREATEQUAL expression
    (47) expression -> expression . NOTEQUAL expression
    (48) expression -> expression . DOUBLEQUAL expression
    (49) expression -> expression . AND expression
    (50) expression -> expression . OR expression
    (52) expression -> expression . DOUBLEPLUS
    (53) expression -> expression . DOUBLEMINUS

    SCOLON          shift and go to state 32
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34
    MULTIPLY        shift and go to state 35
    DIVIDE          shift and go to state 36
    MOD             shift and go to state 37
    POWER           shift and go to state 38
    LESSER          shift and go to state 39
    GREATER         shift and go to state 40
    LESSEQUAL       shift and go to state 41
    GREATEQUAL      shift and go to state 42
    NOTEQUAL        shift and go to state 43
    DOUBLEQUAL      shift and go to state 44
    AND             shift and go to state 45
    OR              shift and go to state 46
    DOUBLEPLUS      shift and go to state 47
    DOUBLEMINUS     shift and go to state 48


state 4

    (4) lang -> variables . SCOLON

    SCOLON          shift and go to state 49


state 5

    (5) lang -> print_stmt . SCOLON

    SCOLON          shift and go to state 50


state 6

    (6) lang -> block .

    MINUS           reduce using rule 6 (lang -> block .)
    LPAREN          reduce using rule 6 (lang -> block .)
    NOT             reduce using rule 6 (lang -> block .)
    VARID           reduce using rule 6 (lang -> block .)
    INT             reduce using rule 6 (lang -> block .)
    FLOAT           reduce using rule 6 (lang -> block .)
    BOOL            reduce using rule 6 (lang -> block .)
    CHAR            reduce using rule 6 (lang -> block .)
    STRING          reduce using rule 6 (lang -> block .)
    LCURL           reduce using rule 6 (lang -> block .)
    FOR             reduce using rule 6 (lang -> block .)
    STRUCT          reduce using rule 6 (lang -> block .)
    TYPE            reduce using rule 6 (lang -> block .)
    PRINT           reduce using rule 6 (lang -> block .)
    SCOLON          reduce using rule 6 (lang -> block .)
    PLUS            reduce using rule 6 (lang -> block .)
    MULTIPLY        reduce using rule 6 (lang -> block .)
    DIVIDE          reduce using rule 6 (lang -> block .)
    MOD             reduce using rule 6 (lang -> block .)
    POWER           reduce using rule 6 (lang -> block .)
    LESSER          reduce using rule 6 (lang -> block .)
    GREATER         reduce using rule 6 (lang -> block .)
    LESSEQUAL       reduce using rule 6 (lang -> block .)
    GREATEQUAL      reduce using rule 6 (lang -> block .)
    NOTEQUAL        reduce using rule 6 (lang -> block .)
    DOUBLEQUAL      reduce using rule 6 (lang -> block .)
    AND             reduce using rule 6 (lang -> block .)
    OR              reduce using rule 6 (lang -> block .)
    DOUBLEPLUS      reduce using rule 6 (lang -> block .)
    DOUBLEMINUS     reduce using rule 6 (lang -> block .)
    $end            reduce using rule 6 (lang -> block .)
    RCURL           reduce using rule 6 (lang -> block .)


state 7

    (7) lang -> for_loop .

    MINUS           reduce using rule 7 (lang -> for_loop .)
    LPAREN          reduce using rule 7 (lang -> for_loop .)
    NOT             reduce using rule 7 (lang -> for_loop .)
    VARID           reduce using rule 7 (lang -> for_loop .)
    INT             reduce using rule 7 (lang -> for_loop .)
    FLOAT           reduce using rule 7 (lang -> for_loop .)
    BOOL            reduce using rule 7 (lang -> for_loop .)
    CHAR            reduce using rule 7 (lang -> for_loop .)
    STRING          reduce using rule 7 (lang -> for_loop .)
    LCURL           reduce using rule 7 (lang -> for_loop .)
    FOR             reduce using rule 7 (lang -> for_loop .)
    STRUCT          reduce using rule 7 (lang -> for_loop .)
    TYPE            reduce using rule 7 (lang -> for_loop .)
    PRINT           reduce using rule 7 (lang -> for_loop .)
    SCOLON          reduce using rule 7 (lang -> for_loop .)
    PLUS            reduce using rule 7 (lang -> for_loop .)
    MULTIPLY        reduce using rule 7 (lang -> for_loop .)
    DIVIDE          reduce using rule 7 (lang -> for_loop .)
    MOD             reduce using rule 7 (lang -> for_loop .)
    POWER           reduce using rule 7 (lang -> for_loop .)
    LESSER          reduce using rule 7 (lang -> for_loop .)
    GREATER         reduce using rule 7 (lang -> for_loop .)
    LESSEQUAL       reduce using rule 7 (lang -> for_loop .)
    GREATEQUAL      reduce using rule 7 (lang -> for_loop .)
    NOTEQUAL        reduce using rule 7 (lang -> for_loop .)
    DOUBLEQUAL      reduce using rule 7 (lang -> for_loop .)
    AND             reduce using rule 7 (lang -> for_loop .)
    OR              reduce using rule 7 (lang -> for_loop .)
    DOUBLEPLUS      reduce using rule 7 (lang -> for_loop .)
    DOUBLEMINUS     reduce using rule 7 (lang -> for_loop .)
    $end            reduce using rule 7 (lang -> for_loop .)
    RCURL           reduce using rule 7 (lang -> for_loop .)


state 8

    (8) lang -> struct . SCOLON

    SCOLON          shift and go to state 51


state 9

    (9) lang -> struct_dec . SCOLON

    SCOLON          shift and go to state 52


state 10

    (10) lang -> struct_assign . SCOLON

    SCOLON          shift and go to state 53


state 11

    (11) lang -> struct_fetch . SCOLON

    SCOLON          shift and go to state 54


state 12

    (12) lang -> empty .
    (61) expression -> empty .

  ! reduce/reduce conflict for SCOLON resolved using rule 12 (lang -> empty .)
  ! reduce/reduce conflict for PLUS resolved using rule 12 (lang -> empty .)
  ! reduce/reduce conflict for MINUS resolved using rule 12 (lang -> empty .)
  ! reduce/reduce conflict for MULTIPLY resolved using rule 12 (lang -> empty .)
  ! reduce/reduce conflict for DIVIDE resolved using rule 12 (lang -> empty .)
  ! reduce/reduce conflict for MOD resolved using rule 12 (lang -> empty .)
  ! reduce/reduce conflict for POWER resolved using rule 12 (lang -> empty .)
  ! reduce/reduce conflict for LESSER resolved using rule 12 (lang -> empty .)
  ! reduce/reduce conflict for GREATER resolved using rule 12 (lang -> empty .)
  ! reduce/reduce conflict for LESSEQUAL resolved using rule 12 (lang -> empty .)
  ! reduce/reduce conflict for GREATEQUAL resolved using rule 12 (lang -> empty .)
  ! reduce/reduce conflict for NOTEQUAL resolved using rule 12 (lang -> empty .)
  ! reduce/reduce conflict for DOUBLEQUAL resolved using rule 12 (lang -> empty .)
  ! reduce/reduce conflict for AND resolved using rule 12 (lang -> empty .)
  ! reduce/reduce conflict for OR resolved using rule 12 (lang -> empty .)
  ! reduce/reduce conflict for DOUBLEPLUS resolved using rule 12 (lang -> empty .)
  ! reduce/reduce conflict for DOUBLEMINUS resolved using rule 12 (lang -> empty .)
    MINUS           reduce using rule 12 (lang -> empty .)
    LPAREN          reduce using rule 12 (lang -> empty .)
    NOT             reduce using rule 12 (lang -> empty .)
    VARID           reduce using rule 12 (lang -> empty .)
    INT             reduce using rule 12 (lang -> empty .)
    FLOAT           reduce using rule 12 (lang -> empty .)
    BOOL            reduce using rule 12 (lang -> empty .)
    CHAR            reduce using rule 12 (lang -> empty .)
    STRING          reduce using rule 12 (lang -> empty .)
    LCURL           reduce using rule 12 (lang -> empty .)
    FOR             reduce using rule 12 (lang -> empty .)
    STRUCT          reduce using rule 12 (lang -> empty .)
    TYPE            reduce using rule 12 (lang -> empty .)
    PRINT           reduce using rule 12 (lang -> empty .)
    SCOLON          reduce using rule 12 (lang -> empty .)
    PLUS            reduce using rule 12 (lang -> empty .)
    MULTIPLY        reduce using rule 12 (lang -> empty .)
    DIVIDE          reduce using rule 12 (lang -> empty .)
    MOD             reduce using rule 12 (lang -> empty .)
    POWER           reduce using rule 12 (lang -> empty .)
    LESSER          reduce using rule 12 (lang -> empty .)
    GREATER         reduce using rule 12 (lang -> empty .)
    LESSEQUAL       reduce using rule 12 (lang -> empty .)
    GREATEQUAL      reduce using rule 12 (lang -> empty .)
    NOTEQUAL        reduce using rule 12 (lang -> empty .)
    DOUBLEQUAL      reduce using rule 12 (lang -> empty .)
    AND             reduce using rule 12 (lang -> empty .)
    OR              reduce using rule 12 (lang -> empty .)
    DOUBLEPLUS      reduce using rule 12 (lang -> empty .)
    DOUBLEMINUS     reduce using rule 12 (lang -> empty .)
    $end            reduce using rule 12 (lang -> empty .)
    RCURL           reduce using rule 12 (lang -> empty .)

  ! SCOLON          [ reduce using rule 61 (expression -> empty .) ]
  ! PLUS            [ reduce using rule 61 (expression -> empty .) ]
  ! MINUS           [ reduce using rule 61 (expression -> empty .) ]
  ! MULTIPLY        [ reduce using rule 61 (expression -> empty .) ]
  ! DIVIDE          [ reduce using rule 61 (expression -> empty .) ]
  ! MOD             [ reduce using rule 61 (expression -> empty .) ]
  ! POWER           [ reduce using rule 61 (expression -> empty .) ]
  ! LESSER          [ reduce using rule 61 (expression -> empty .) ]
  ! GREATER         [ reduce using rule 61 (expression -> empty .) ]
  ! LESSEQUAL       [ reduce using rule 61 (expression -> empty .) ]
  ! GREATEQUAL      [ reduce using rule 61 (expression -> empty .) ]
  ! NOTEQUAL        [ reduce using rule 61 (expression -> empty .) ]
  ! DOUBLEQUAL      [ reduce using rule 61 (expression -> empty .) ]
  ! AND             [ reduce using rule 61 (expression -> empty .) ]
  ! OR              [ reduce using rule 61 (expression -> empty .) ]
  ! DOUBLEPLUS      [ reduce using rule 61 (expression -> empty .) ]
  ! DOUBLEMINUS     [ reduce using rule 61 (expression -> empty .) ]


state 13
